# vulkan-voxel-game

./: .clang  .cproject  .gdb_history  .gitignore  .project  Cargo.toml  Makefile  README.md
assets/: test.ff
assets/blocks/grass/: left.ff  up.ff
assets/blocks/soil/: left.ff
assets/blocks/stone/: right.ff
assets/blocks/texturetest/: back.ff  down.ff  front.ff  left.ff  right.ff  up.ff
assets/shaders/: nodeupdate.comp.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  vertexdisplay.vert  vertexgeneration.comp
build2/: makefile  objects.mk  plant-simulator
build2/src/: main.d  plant_utils.d  subdir.mk  utils.d  vulkan_utils.d
include/: linmath.h
src/: archetype.rs  block.c  block.h  camera.c  camera.h  camera.rs  constants.h  device_context.h  errors.c  errors.h  farbfeld.c  farbfeld.h  global_context.c  global_context.h  grid.rs  main.c  main.rs  node.rs  plant_utils.c  plant_utils.h  utils.c  utils.h  vertex.h  vertex.rs  vulkan_helper.c  vulkan_helper.h  vulkan_utils.c  vulkan_utils.h  window_context.h  world.c  world.h  world_utils.c  world_utils.h  worldgen.c  worldgen.h
src/shader/: frag.rs  gridupdategrid.rs  mod.rs  nodecomp.rs  vert.rs  vertexdisplay.rs
src/utils/: mod.rs
