[package]
name = "compu-genesis"
version = "0.1.0"
authors = ["pimpale <gpimpale29@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
gtk = "0.2"
gio = "0.2"
rand = "0.6.5"
vulkano = "0.11"
vulkano-shaders = "0.11"
vulkano-win = "0.11"
cgmath = "0.16"
image = "0.20"
winit = "0.18"
time = "0.1.37"
